Add `search` query param to list publications endpoint
